@@ -1,3 +1,7 @@
+.dontPrint {
+  display:none;
+}
+
 .menuOpts {
   display:none;
 }
