@@ -29,6 +29,7 @@ NOCC 1.3    ?? ??, 200?
     * Bug #1518887 : errors when enable preferences (Arnaud Boudou).
 
   Patches
+    * Patch #1581097 : Don't print mailSwitchHeaders (Tim Gerundt).
     * Patch #1579972 : Missing translations nl.php (openfan).
     * Patch #1579550 : Remove content-type header from index.php (Tim Gerundt).
     * Patch #1578504 : Use <label> for signature pref (Tim Gerundt).
